[package]
name = "rust_tracker"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
publish = false

[dependencies]
eframe = { version = "0.26.2", features = ["default", "__screenshot" ] }
egui_extras = { version = "0.26.2", features = ["default", "image"] }
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
serde_json = "1.0.114"
serde = "1.0.197"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]